# layer-shell

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  Widgets.blp  Widgets.ui  bindings.h  bindings.hpp  build.rs  cbindgen.toml  cpu-widget.c  cpu-widget.h  css.c  css.h  dbus-generate.sh  htop-widget.c  htop-widget.h  htop-window.c  htop-window.h  icons-generate.sh  icons.c  icons.h  language-widget.c  language-widget.h  launcher-window.c  launcher-window.h  main.c  main.cpp  main.css  main.scss  memory-widget.c  memory-widget.h  meson.build  network-widget.c  network-widget.h  network-window.c  network-window.h  session-widget.c  session-widget.h  (+21 more)
clock/: Cargo.toml
clock/src/: clock.rs  event.rs  lib.rs  stream.rs  task.rs
hyprland/: Cargo.toml
hyprland/src/: caps_lock.rs  command.rs  env.rs  event.rs  hyprctl.rs  hyprland.rs  lib.rs  raw_event.rs  raw_stream.rs  reader.rs  state.rs  stateful_stream.rs  stream.rs  task.rs  writer.rs
icons/: generate.sh  meson.build
io/: Cargo.toml  bindgen-fix.h  build.sh  cbindgen.toml  meson.build
io/src/: actors.rs  app_list.rs  args.rs  command.rs  config.rs  cpu.rs  event.rs  global.rs  hyprland.rs  ipc.rs  lib.rs  main_loop.rs  memory.rs  output_sound.rs  session.rs  subscriptions.rs  time.rs
network/: Cargo.toml
network/src/: access_point.rs  access_point_ssid.rs  access_point_strength.rs  device_rx.rs  device_tx.rs  devices.rs  event.rs  global_devices.rs  lib.rs  multiplexer.rs  network.rs  network_data.rs  network_list.rs  network_task.rs  nm_event.rs  nm_stream.rs  primary_connection.rs  primary_device.rs  primary_devices.rs  speed.rs  stream_map.rs  wifi_status.rs
pipewire/: Cargo.toml
pipewire/src/: command.rs  event.rs  lib.rs  store.rs
sound/: Cargo.toml
sound/src/: dbus.rs  event.rs  lib.rs  sound.rs  sound_task.rs
src/: actor.rs  actors.rs  args.rs  bindgen-fix.h  build.sh  cbindgen.toml  channel.rs  clock.rs  command.rs  config.rs  cpu.rs  emitter.rs  epoll.rs  error.rs  event.rs  event_queue.rs  external.c  external.h  external.rs  fatal.rs  fd_id.rs  ffi.rs  global.rs  hyprctl.rs  io.rs  ipc.rs  lib.rs  liburing-wrapper.c  liburing-wrapper.h  lock_channel.rs  logger.rs  loop.rs  macros.rs  main.rs  main_loop.rs  memory.rs  meson.build  module_id.rs  openssl-wrapper.c  openssl-wrapper.h  (+7 more)
src/dbus/: actor.rs  auth.rs  connector.rs  introspectible_object_at.rs  mod.rs  read_write.rs  reader.rs  serial.rs  writer.rs
src/dns/: mod.rs  name.rs  request.rs  response.rs
src/examples/: just-io.rs
src/ffi/: array.rs  carray.rs  coption.rs  cstring.rs  gvc.rs  mod.rs  option.rs  short_string.rs  string.rs
src/globals/: mod.rs  widgets.rs  windows.rs
src/https/: actor.rs  connection.rs  mod.rs
src/hyprland/: mod.rs  reader.rs  state.rs  writer.rs
src/layers/: mod.rs
src/liburing/: actor.rs  cqe.rs  generated.rs  liburing.rs  mod.rs  pending.rs  sqe.rs
src/models/: app_list.rs  command.rs  cpu.rs  event.rs  hyprland.rs  logout.rs  memory.rs  mod.rs  network_manager.rs  output_sound.rs  session.rs  singleton.rs  subscriptions.rs  time.rs  weather_api.rs
src/modules/: caps_lock.rs  clock.rs  control.rs  cpu.rs  kb_mod.rs  maybe_connected.rs  memory.rs  mod.rs  niri.rs  nm.rs  pw.rs  session_dbus.rs  sound.rs  system_dbus.rs  timer.rs  tray.rs  weather.rs
src/sansio/: dbus.rs  dns.rs  file_reader.rs  mod.rs  op.rs  satisfy.rs  timerfd.rs  unix_socket_oneshot_writer.rs  unix_socket_reader.rs  wants.rs
src/scheduler/: config.rs  mod.rs  queue.rs  queue_item.rs  thread_pool.rs  timer.rs
src/timer/: mod.rs
src/timerfd/: mod.rs  tick.rs
src/utils/: args.rs  array_writer.rs  dedup.rs  epoll.rs  exec_async.rs  fixed_size_array.rs  fixed_size_buffer.rs  get_json.rs  getenv.rs  global.rs  heap_blob.rs  hyprland_client.rs  hyprlang_client.rs  infallible.rs  ipc.rs  keybindings.rs  layer_window.rs  load_css.rs  logger.rs  macros.rs  messaging.rs  mod.rs  nl_separated_buffer.rs  singleton.rs  sockaddr.rs  spawn.rs  string_pool.rs  toggle_window.rs  typed_children.rs  widget_factory.rs
src/weather/: mod.rs  weather_response.rs
src/widgets/: app_list.rs  clock.rs  cpu.rs  htop_widget.rs  language.rs  logout.rs  mod.rs  network_list.rs  power_button.rs  ram.rs  sound.rs  terminal.rs  weather.rs  weather_forecast.rs  wifi.rs  workspaces.rs
src/windows/: launcher.rs  logout_screen.rs  mod.rs  networks.rs  terminal.rs  top_bar.rs  weather.rs
staticlib/: Cargo.toml
tracker/: Cargo.toml
tracker/src/: command.rs  disk.rs  event.rs  lib.rs  state.rs  tracker.rs  trackerctl.rs  view.rs
tray/: Cargo.toml
tray/src/: dbus_event.rs  event.rs  lib.rs  multiplexer.rs  status_notifier_watcher.rs  store.rs  stream_id.rs  stream_map.rs  tray.rs  tray_stream.rs  tray_task.rs  trayctl.rs  uuid.rs
ui/: Cargo.toml  Config.cpp  Config.hpp  Event.cpp  Event.hpp  KbModOverlay.cpp  KbModOverlay.hpp  Overlay.cpp  Overlay.hpp  SessionOverlay.cpp  SessionOverlay.hpp  SoundOverlay.cpp  SoundOverlay.hpp  TerminalOverlay.cpp  TerminalOverlay.hpp  TopBar.cpp  TopBar.hpp  Tray.cpp  Tray.hpp  UiModel.cpp  UiModel.hpp  WeatherOverlay.cpp  WeatherOverlay.hpp  Widgets.blp  Widgets.ui  app.py  assertions.h  base_overlay.c  base_overlay.h  base_window.c  base_window.h  bluetooth.c  bluetooth.h  buffer.c  buffer.h  caps_lock_overlay.blp  caps_lock_overlay.c  caps_lock_overlay.h  caps_lock_window.blp  caps_lock_window.c  (+121 more)
ui/blueprint/: htop.blp  launcher.blp  meson.build  ping.blp  session.blp  top_bar.blp  weather.blp
ui/css/: main.scss  meson.build
ui/htop/: window.py
ui/icons/: icons.py  make-x-icons.sh  meson.build
ui/include/: base_window.h  builder.h  css.h  htop.h  icons.h  launcher.h  macros.h  ping.h  session.h  top_bar.h  weather.h  weather_helper.h  window_helper.h
ui/launcher/: row.py  window.py
ui/pch/: pch.h
ui/ping/: window.py
ui/session/: window.py
ui/src/: base_window.c  buffer.c  builder.c  css.c  htop.c  icons.c  icons.rs  launcher.c  main.rs  ping.c  session.c  top_bar.c  weather.c  weather_helper.c  window_helper.c
ui/top_bar/: change_theme.py  clock.py  (+11 more)
weather/: Cargo.toml
(+634 files in other folders)
