[package]
name = "layer-shell-io"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]
name = "layer_shell_io"

[dependencies]
anyhow = { version = "1", default-features = false }
log = { version = "0.4", default-features = false }
dbus = { package = "mini-sansio-dbus", version = "5.0.2" }
dns = { package = "mini-sansio-dns", version = "2.0.1" }
string-bath = { version = "0.2.4" }
toml_parser = { version = "1.1.2", default-features = false }
microjson = { version = "0.1", default-features = false }
libc = { version = "0.2", default-features = false }

[features]
debug-backtrace = ["anyhow/std", "anyhow/backtrace"]

[build-dependencies]
cc = "1"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[[example]]
name = "just-io"
path = "src/examples/just-io.rs"
