[package]
name = "layer-shell-io"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]
name = "layer_shell_io"

[dependencies]
anyhow = { version = "1", default-features = false }
log = { version = "0.4", default-features = false }
string-bath = { version = "0.2.4" }
microjson = { version = "0.1", default-features = false }
libc = { version = "0.2", default-features = false }
rustix = { version = "1.1", default-features = false, features = ["net", "fs"] }

[features]
debug-backtrace = ["anyhow/std", "anyhow/backtrace"]

[build-dependencies]
cc = "1"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[[example]]
name = "just-io"
path = "src/examples/just-io.rs"
