[package]
name = "layer-shell-io"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "staticlib"]

[workspace.dependencies]
cc = "1"
libc = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
microjson = { version = "0.1", default-features = false }
rustix = { version = "1.1", default-features = false, features = [
    "net",
    "fs",
    "time",
    "event",
] }
string-bath = { version = "0.2.4" }

[lib]
name = "layer_shell_io"

[dependencies]
libc = { workspace = true }
log = { workspace = true }
microjson = { workspace = true }
rustix = { workspace = true }
string-bath = { workspace = true }

[features]
standalone-staticlib = []

[build-dependencies]
cc = { workspace = true }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
panic = "abort"

[[example]]
name = "just-io"
path = "src/examples/just-io.rs"
