[package]
name = "clock"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
ffi = { path = "../ffi" }
module = { path = "../module" }
