[package]
name = "hyprland"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
ffi = { path = "../ffi" }
