[package]
name = "io"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }

ffi = { path = "../ffi" }

hyprland = { path = "../hyprland" }
cpu = { path = "../cpu" }
memory = { path = "../memory" }
clock = { path = "../clock" }
control = { path = "../control" }
network = { path = "../network" }
weather = { path = "../weather" }
