[package]
name = "io"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]
name = "layer_shell_io"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }

ffi = { path = "../ffi" }

hyprland = { path = "../hyprland" }
cpu = { path = "../cpu" }
memory = { path = "../memory" }
clock = { path = "../clock" }
control = { path = "../control" }
network = { path = "../network" }
weather = { path = "../weather" }
tray = { path = "../tray" }
