[package]
name = "io"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]
name = "layer_shell_io"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

ffi = { path = "../ffi" }

clock = { path = "../clock" }
control = { path = "../control" }
cpu = { path = "../cpu" }
hyprland = { path = "../hyprland" }
memory = { path = "../memory" }
network = { path = "../network" }
sound = { path = "../sound" }
tray = { path = "../tray" }
weather = { path = "../weather" }
