[package]
name = "layer-shell-network"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

layer-shell-dbus = { path = "../dbus" }
dbus-tokio = "0.7"
dbus = "0.9"
