[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
zbus = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
pin-project-lite = { workspace = true }
async-trait = { workspace = true }

ffi = { path = "../ffi" }
module = { path = "../module" }
