[package]
name = "layer-shell-pipewire"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

pipewire = "0.8"
