[package]
name = "sound"
version = "0.1.0"
edition = "2024"

[dependencies]
zbus = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
module = { path = "../module" }
