[package]
name = "layer-shell-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
paste = { workspace = true }
log = { workspace = true }

layer-shell-io = { path = "../io" }

gtk4 = { version = "0.9", features = ["v4_14"] }
gtk4-layer-shell = "0.4"
vte4 = { version = "0.8", features = ["v0_78"] }
pretty_env_logger = "0.5"
