[package]
name = "layer-shell-weather"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

async-stream = "0.3"
