[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
pin-project-lite = { workspace = true }
ffi = { path = "../ffi" }
